# RINSE_Senior_Design

./: .gitignore  README.md
src/limo_bringup/: package.xml  setup.cfg  setup.py
src/limo_bringup/config/: controllers.yaml  limo_controllers.yaml
src/limo_bringup/launch/: limo_gz_bringup.launch.py  limo_headless_rviz.launch.py  limo_keyboard.launch.py
src/limo_bringup/resource/: limo_bringup
src/limo_control/: package.xml  setup.py
src/limo_control/launch/: limo_waypoint_nav.launch.py
src/limo_control/limo_control/: limo_control.py  limo_waypoint_nav.py
src/limo_ros2/limo_car/: CMakeLists.txt  package.xml
src/limo_ros2/limo_car/gazebo/: ackermann.xacro  ackermann_with_sensor.xacro  sensor.xacro
src/limo_ros2/limo_car/launch/: ackermann_gazebo.launch.py
src/limo_ros2/limo_car/urdf/: limo_ackerman_base.xacro
src/limo_ros2/limo_description/launch/: gazebo_models_diff.launch.py
src/limo_ros2/limo_description/urdf/: limo.sdf  limo.urdf  limo_ackerman.gazebo  limo_four_diff.gazebo  limo_four_diff.xacro  limo_four_diff_2.gazebo  limo_gazebo.gazebo
src/limo_ros2/limo_description/worlds/: no_sun.world
