<?xml version="1.0"?>
<package format="3">
  <name>limo_bringup</name>
  <version>0.1.0</version>
  <description>Jazzy bringup for Agilex LIMO (RViz + Gazebo Sim)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>limo_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

   <export>
    <build_type>ament_python</build_type>
  </export>
</package>
